Closed Bug 395541 Opened 17 years ago Closed 17 years ago

when searching previous autocomplete results, if we find any, tell the front end immediately, instead of waiting for our first db query to return

Categories

(Firefox :: Address Bar, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Firefox 3 alpha8

People

(Reporter: moco, Assigned: moco)

References

Details

Attachments

(1 file)

when searching previous autocomplete results, if we find any, tell the front end immediately, instead of waiting for our first db query to return.

I thought I got this with bug #394527, but further testing shows I missed part of it.

supplimental patch coming.
Attachment #280209 - Flags: review?(dietrich)
Attachment #280209 - Flags: review?(dietrich) → review+
Attachment #280209 - Flags: approval1.9+
fixed.

Checking in nsNavHistoryAutoComplete.cpp;
/cvsroot/mozilla/toolkit/components/places/src/nsNavHistoryAutoComplete.cpp,v  <
--  nsNavHistoryAutoComplete.cpp
new revision: 1.21; previous revision: 1.20
done
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: