fix for bug #395541:  when searching previous autocomplete results, if we find any, tell the front end immediately, instead of waiting for our first db query to return r=dietrich, a=mconnor for m8